Fixed overflow break in cta widget

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -283,7 +283,7 @@ body{
 }
 
 .call_to_action_bundle img{
-  height: 100vh;
+  height: 100%;
   width: 100%;
   object-fit: cover;
 }
